# chip_8

./: .gitignore  CMakeLists.txt  LICENSE  meson.build
include/: cpu.hpp  instruction.hpp  opcode.hpp  operation.hpp  parser.hpp  state.hpp  ui.hpp
src/: CMakeLists.txt  builder.ui  cpu.cpp  cpu.hpp  emulator.cpp  emulator.hpp  instruction.cpp  instruction.hpp  keyboard.hpp  main.cpp  meson.build  opcode.cpp  opcode.hpp  parser.hpp  screen.hpp  state.hpp  ui.cpp  ui.hpp
